fixed overflow scrolling on project bubbles

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -152,7 +152,7 @@ body {
 
 .projectInfo {
   position: fixed;
-  over
+  overflow-y: scroll;
   width: 100%;
   height: 100%;
   top: 0;
